--- a/.github/workflows/weeklypush.yml
+++ b/.github/workflows/weeklypush.yml
@@ -10,7 +10,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Run PowerShell Script
-        shell: pwsh
+        shell: Powershell
         run: |
           $username = "elastic"
           $password = "sPd-zKWyDB7qh3*443gu"
